istio-configs/app-v2-pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: app-v2-pa
  namespace: app-v2
spec:
  mtls:
    mode: STRICT
