istio-configs/pa-v1.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: app-v1-pa
  namespace: app-ns1
spec:
  mtls:
    mode: STRICT
